--- a/tema_1_ciencia_y_mtodo_cientfico.html
+++ b/tema_1_ciencia_y_mtodo_cientfico.html
@@ -14,10 +14,8 @@
 <script type="text/javascript" src="exe_jquery.js"></script>
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
-<link rel="stylesheet" type="text/css" href="udl-content.css" />
-<script type="text/javascript" src="udl-content.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
+    </head>
 <body class="exe-web-site" id="exe-node-1"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -75,52 +73,28 @@
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper UDLcontentIdevice em_iDevice" id="id10">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Leer</h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
-<div id="ta10_136_2" class="block iDevice_content">
-<div class="exe-udlContent exe-udlContent-expression"><section class="exe-udlContent-block"><div class="exe-udlContent-content"><div class="exe-udlContent-content-main"><p>El conocimiento se clasifica en:<br>■ Popular (natural, vulgar). Es cotidiano y se caracteriza porque permanece en el tiempo; además, suele pertenecer a culturas determinadas&nbsp;sin orígenes claros. Este tipo de conocimiento se aprende y se aplica.<br>■ Científico. Ocurre mediante el seguimiento de una metodología o&nbsp;serie de pasos con la finalidad de descubrir causas y fenómenos e&nbsp;interpretar hechos. Se aprecia la realidad mediante la observación&nbsp;registrada, la demostración y comprobación de eventos de forma&nbsp;sistemática, por lo que supera el sentido común.<br>Partiendo de esto, la ciencia se puede definir como el conjunto de conocimientos objetivos y verificables relacionados con la realidad que rodea al ser&nbsp;humano, y que busca formular explicaciones para incorporarlas a las preexistentes, con el propósito de seguir construyendo nuevos conocimientos.</p>
-<p>Las ciencias pueden ser:<br>■ Naturales: se encarga del estudio&nbsp;de fenómenos naturales y de las leyes que los rigen. En esta categoría <br>se encuentran la química, física, biología, astronomía, zoología, botánica, meteorología, paleontología.<br>■ Formales: Estudian contenidos&nbsp;abstractos, como las matemáticas,&nbsp;la lógica y las ciencias de la computación.<br>■ Sociales: Atienden las dimensiones individuales y colectivas de la&nbsp;existencia. Algunas son: antropología, economía, derecho y sociología.</p>
-<p>El método científico y sus pasos<br>Para ser considerado como científico, este método debe poseer dos características fundamentales:<br>■ Reproducibilidad: Debe poder&nbsp;replicarse en cualquier lugar y&nbsp;por cualquier persona.</p>
-<p>■ Refutabilidad: Puede ser objetado en cualquier momento.</p></div></div></section></div>
-</div>
-</div>
-</div>
-</div>
-</article>
-<article class="iDevice_wrapper UDLcontentIdevice em_iDevice" id="id12">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Métodos de investigación científica</h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
-<div id="ta12_137_2" class="block iDevice_content">
-<div class="exe-udlContent exe-udlContent-engagement"><section class="exe-udlContent-block"><div class="exe-udlContent-content"><div class="exe-udlContent-content-main"><p>Existen diversas opciones para abordar los problemas que se presentan en&nbsp;la ciencia y la construcción de nuevos conocimientos científicos. Estos son:<br>■ Método sintético: busca reconstruir un acontecimiento de manera resumida, valiéndose de los&nbsp;diferentes elementos fundamentales que estuvieron presentes en&nbsp;el desarrollo del acontecimiento.<br>■ Método inductivo: lleva a conclusiones generales a partir de&nbsp;casos individuales.<br>■ Método deductivo: va desde&nbsp;un razonamiento general y lógico, basado en leyes o principios, hasta un hecho concreto.<br>■ Método analítico: consiste en&nbsp;la separación de un todo descomponiéndose en sus partes o&nbsp;elementos para observar las causas, naturaleza y los efectos.</p></div></div></section></div>
-</div>
-</div>
+<article class="iDevice_wrapper FreeTextIdevice" id="id15">
+<div class="iDevice emphasis0">
+<div id="ta15_85" class="block iDevice_content">
+<figure class="exe-figure exe-image float-right license-custom" style="width: 510px;"><img src="3.1_ciencias.png" alt="" width="510" height="250" />
+<figcaption class="figcaption"></figcaption>
+</figure>
+<p style="text-align: justify;"><strong>El conocimiento se clasifica en:</strong><br />■ Popular (natural, vulgar). Es cotidiano y se caracteriza porque permanece en el tiempo; además, suele pertenecer a culturas determinadas <br />sin orígenes claros. Este tipo de conocimiento se aprende y se aplica.<br />■ Científico. Ocurre mediante el seguimiento de una metodología o <br />serie de pasos con la finalidad de descubrir causas y fenómenos e <br />interpretar hechos. Se aprecia la realidad mediante la observación <br />registrada, la demostración y comprobación de eventos de forma <br />sistemática, por lo que supera el sentido común.<br />Partiendo de esto, la ciencia se puede definir como el conjunto de conocimientos objetivos y verificables relacionados con la realidad que rodea al ser humano, y que busca formular explicaciones para incorporarlas a las preexistentes, con el propósito de seguir construyendo nuevos conocimientos.</p>
+<p style="text-align: justify;"><strong>Las ciencias pueden ser:</strong><br />■ Naturales: se encarga del estudio de fenómenos naturales y de las leyes que los rigen. En esta categoría se encuentran la química, física, biología, astronomía, zoología, botánica, meteorología, paleontología.<br />■ Formales: Estudian contenidos abstractos, como las matemáticas, la lógica y las ciencias de la computación.<br />■ Sociales: Atienden las dimensiones individuales y colectivas de la existencia. Algunas son: antropología, economía, derecho y sociología.</p>
+<p style="text-align: justify;"><strong>Métodos de investigación científica</strong><br /> Existen diversas opciones para abordar los problemas que se presentan en la ciencia y la construcción de nuevos conocimientos científicos. Estos son:<br />■ Método sintético: busca reconstruir un acontecimiento de manera resumida, valiéndose de los diferentes elementos fundamentales que estuvieron presentes en el desarrollo del acontecimiento.<br />■ Método inductivo: lleva a conclusiones generales a partir de casos individuales.<br />■ Método deductivo: va desde un razonamiento general y lógico, basado en leyes o principios, hasta un hecho concreto.<br />■ Método analítico: consiste en la separación de un todo descomponiéndose en sus partes o elementos para observar las causas, naturaleza y los efectos.</p>
+<p style="text-align: justify;"><strong>El método científico consiste en un proceso donde se emplea:</strong><br />■ Observación: se define el fenómeno natural desde la realidad y de manera objetiva.<br />■ Planteamiento del problema: se identifica y formula claramente la pregunta a resolver.<br />■ Hipótesis: se establecen suposiciones para tratar de explicar la causa del fenómeno natural.<br />■ Experimentación: Se diseña un experimento, se realiza y se anotan los resultados con la finalidad de confirmar, descartar o reformular la hipótesis.<br />■ Análisis: se debe examinar y evaluarlos datos recopilados, de manera efectiva.<br />■ Conclusión: se presentan los resultados a la comunidad científica y al público en general.</p>
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper UDLcontentIdevice em_iDevice" id="id13">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Importante</h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
-<div id="ta13_138_2" class="block iDevice_content">
-<div class="exe-udlContent exe-udlContent-expression"><section class="exe-udlContent-block"><div class="exe-udlContent-content"><div class="exe-udlContent-content-main"><p>El&nbsp;método científico&nbsp;consiste en un proceso donde se emplea:<br>■ Observación: se define el fenómeno natural desde la realidad y&nbsp;de manera objetiva.<br>■ Planteamiento del problema:&nbsp;se identifica y formula claramente la pregunta a resolver.<br>■ Hipótesis: se establecen suposiciones para tratar de explicar&nbsp;la causa del fenómeno natural.<br>■ Experimentación: Se diseña&nbsp;un experimento, se realiza y se&nbsp;anotan los resultados con la finalidad de confirmar, descartar<br>o reformular la hipótesis.<br>■ Análisis: se debe examinar y&nbsp;evaluarlos datos recopilados, de&nbsp;manera efectiva.<br>■ Conclusión: se presentan los&nbsp;resultados a la comunidad científica y al público en general.</p></div></div></section></div>
-</div>
-</div>
-</div>
-</div>
-</article>
-<article class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id14">
+<article class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id16">
 <div class="iDevice emphasis1" >
 <header class="iDevice_header"><h1 class="iDeviceTitle">Actividad</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
-<div id="ta14_139_2" class="block iDevice_content">
-<p>Construye una definición de las disciplinas: Física, Química, Biología, Astronomía y menciona algunas profesiones relacionadas a ellas. Incluye además algunas ramas más actualizadas de las Ciencias Naturales.<br />● Replica el experimento de la figura 2. Anota en tu cuaderno y desglosa la información obtenida al realizar los pasos del método científico.</p>
+<div id="ta16_153_2" class="block iDevice_content">
+<p>Construye una definición de las disciplinas:</p>
+<p>Física,<br />Química,<br />Biología,<br />Astronomía</p>
+<p>y menciona algunas profesiones relacionadas a ellas. Incluye además algunas ramas más actualizadas de las Ciencias Naturales.<br />● Replica algun experimento de internet. Anota en tu cuaderno y desglosa la información obtenida al realizar los pasos del método científico.</p>
 </div>
 </div>
 </div>
