--- a/tema_2_modelos_principios_leyes_y_teoras_cientficas.html
+++ b/tema_2_modelos_principios_leyes_y_teoras_cientficas.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
+    </head>
 <body class="exe-web-site" id="exe-node-2"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -59,6 +59,51 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Tema 2: Modelos, principios, leyes y teorías científicas</h1></header>
+<article class="iDevice_wrapper preknowledgeIdevice em_iDevice em_iDevice_preknowledge" id="id18">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Conocimiento previo</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta18_155_2" class="block iDevice_content">
+<p><span style="font-size: 12pt;">¿Conoces algún modelo, principio ley o teoría de las ciencias físicas? </span><br /><span style="font-size: 12pt;">¿Crees que son importantes para generar conocimiento científico? </span><br /><span style="font-size: 12pt;">¿Por qué?</span></p>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper FreeTextIdevice" id="id19">
+<div class="iDevice emphasis0">
+<div id="ta19_85" class="block iDevice_content">
+<figure class="exe-figure exe-image float-right license-custom" style="width: 243px; text-align: center;"><img src="3.2.1_modelos.png" alt="" width="243" height="339" />
+<figcaption class="figcaption"><em>Figura 1 Modelos sistema solar.</em></figcaption>
+</figure>
+<p style="text-align: justify;">Los científicos utilizan modelos, principios, y leyes para describir y explicar la realidad. Todos estos elementos se construyen sobre la base del razonamiento lógico y se busca refutarlos mediante la experimentación y la observación para luego sustituirlos por modelos, principios, y leyes que expliquen mejor la naturaleza.</p>
+<p style="text-align: justify;"><strong>Modelos</strong><br />Son esquemas o representaciones de eventos, ideas, procesos y objetos reales que elaboran los científicos para reproducir un aspecto de la realidad que les interese estudiar; integran en él los factores más relevantes del fenómeno bajo estudio. El valor de un modelo científico se encuentra estrechamente relacionado con la medida en que los resultados que predice concuerden con las observaciones del fenómeno real. Estos modelos pueden ser constantemente mejorados en la medida en que se encuentren e incorporen nuevas observaciones.</p>
+<p style="text-align: justify;"><strong>Los modelos cumplen dos funciones principales en el avance de la ciencia:</strong> <br />■ Simplificar sistemas y fenómenos para concentrar la atención sobre las situaciones de mayor interés.<br />■ Estimular la investigación a través de la visualización de sistemas y fenómenos.</p>
+<p style="text-align: justify;">En la actualidad, el uso de computadoras agiliza la modelización de un fenómeno, además de su evaluación y actualización.</p>
+<figure class="exe-figure exe-image float-left license-custom" style="width: 238px; text-align: center;"><img src="3.2.2_principios.png" alt="" width="269" height="201" />
+<figcaption class="figcaption"><em>Figura 2 Principio atomico</em></figcaption>
+</figure>
+<p style="text-align: justify;"><strong>Principios</strong><br />Son generalizaciones científicas utilizadas para entender, corroborar o actualizar el conocimiento. Este proceso se emplea con la finalidad de obtener información relevante y confiable. Desde sus inicios, en las ciencias físicas existen numerosos principios; algunos han mantenido su vigencia a lo largo de los años, mientras otros ya han sido derogados.<br />Un ejemplo de los principios que se divulgan al generar nuevo conocimiento científico hace referencia al modelo atómico de Bohr, quien tuvo que postular algunos principios para describir su modelo (se estudiarán en otra unidad) que se resumen en la figura 2</p>
+<p style="text-align: justify;"><br style="clear: both;" /><strong>Leyes y teorías</strong><br />Una ley presenta una construcción basada en la experiencia, cuyo carácter es provisional y limitado a pesar ser producto de rigurosos experimentos. Un ejemplo es la ley de la conservación de la energía que establece que "la energía no se crea ni se destruye, sólo se transforma".<br />La ley es una teoría que ha demostrado ser verdadera. Por ejemplo, la tercera ley de Newton establece que cada vez que un objeto empuja o tira <br />de otro objeto, el segundo objeto empuja o tira con la misma cantidad de fuerza pero en la dirección opuesta. Esto quiere decir que las fuerzas <br />siempre vienen en pares. Si ejerces una fuerza sobre un objeto, ese objeto ejerce una fuerza del mismo tamaño sobre ti, pero en la dirección opuesta.<br />Por su parte, las teorías se definen como un conjunto de hipótesis que han sido verificadas junto a otras leyes, conceptos y definiciones. Son <br />una explicación general a un conjunto de fenómenos. Las teorías se construyen a través de mecanismos que siguen patrones sobre algún área del mundo que nos interesa. Por ejemplo, en los años 450 a.C., Leucipo propuso la teoría atómica de la materia, que explicaba que la materia está compuesta por partículas a las que llamó átomos. <br />Dijo que son eternos, indivisibles, homogéneos, incompresibles e invisibles y que se diferencian en su forma y tamaño alterando las propiedades <br />de la materia, ya que estas varían según el agrupamiento de los átomos. Treinta años más tarde, Demócrito continuó con esta teoría.</p>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id20">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Actividad</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta20_157_2" class="block iDevice_content">
+<p>Contesta en tu <strong>cuaderno</strong>, luego pasalo a una <strong>hoja blanca para entregar</strong> al maestro:</p>
+<p>1- <strong>Explica</strong> una semejanza y una diferencia entre:<br />●Modelo:<br />●Ley<br />●Teoría.</p>
+<p>2- Menciona dos instituciones de la República Dominicana que utilicen modelos de predicción de fenómenos.</p>
+<p><strong>Responde</strong>: ¿Qué eventos predicen? ¿Por qué es importante conocer esos pronósticos?</p>
+</div>
+</div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
