--- a/tema_3_estndares_magnitudes_y_unidades.html
+++ b/tema_3_estndares_magnitudes_y_unidades.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
+    </head>
 <body class="exe-web-site" id="exe-node-4"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -59,6 +59,49 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Tema 3: Estándares, magnitudes y unidades</h1></header>
+<article class="iDevice_wrapper preknowledgeIdevice em_iDevice em_iDevice_preknowledge" id="id21">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Conocimiento previo</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta21_158_2" class="block iDevice_content">
+<p>Qué estándares se utilizan para medir las propiedades de la materia?</p>
+<p>¿Cuál es el sistema de medidas más utilizado?</p>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper FreeTextIdevice" id="id22">
+<div class="iDevice emphasis0">
+<div id="ta22_85" class="block iDevice_content">
+<figure class="exe-figure exe-image float-right license-custom" style="width: 413px; text-align: center;"><img src="3.3.1_sistema_int.png" alt="" width="469" height="227" />
+<figcaption class="figcaption"><span style="color: #0000ff;">tabla del sistema internacional</span></figcaption>
+</figure>
+<p style="text-align: justify;">El <strong>sistema métrico</strong> es la organización de unidades empleada por los científicos del mundo y que desde 1960 se le conoce como sistema internacional con su abreviatura SI. Su versión actual presenta siete magnitudes fundamentales: masa, longitud, tiempo, corriente eléctrica, temperatura, intensidad luminosa y cantidad de sustancia, todas las demás son derivadas, como volumen, densidad y fuerza, entre otros.</p>
+<p style="text-align: justify;"><strong>Estándares, magnitudes y unidades</strong><br />En metrología (la ciencia de la medición), un estándar (o etalón) es un objeto, sistema o experimento que tiene una relación definida con una unidad de medida de una cantidad física. Las magnitudes representan cualquier característica de la materia o de cambios que experimenta y que se pueden medir. Pueden ser:<br />■ Escalares: definidas por un número y una unidad de medida. Por ejemplo: masa y temperatura.<br />■ Vectoriales: además de presentar número y unidad de medida requieren ser representadas con la dirección, el sentido que tiene, en un <br />sistema de coordenadas específico. Por ejemplo: fuerza y aceleración.</p>
+<p style="text-align: justify;"><br /><strong>Magnitudes fundamentales del SI</strong><br />Son aquellas que la comunidad científica ha seleccionado como base y no deben ser definidas en función de otras magnitudes. En la tabla anterior se encuentran detalladas. Se representan a partir de estas unidades y permiten realizar la conversión a unas mayores o menores de las mismas cantidades, ya que en este sistema la relación se encuentra en múltiplos de 10.</p>
+<figure class="exe-figure exe-image float-left license-custom" style="width: 241px; text-align: justify;"><img src="3.3.2_magnitudes_derivadas.png" alt="" width="241" height="232" />
+<figcaption class="figcaption"><a href="https://dummyimage.com/" target="_blank" class="author" rel="noopener">Magnitudes derivadas.Image</a>.</figcaption>
+</figure>
+<p style="text-align: justify;">La Conferencia General de Pesos y Medidas (CGPM), en su 26ª reunión, define las unidades fundamentales así:<br />■ <strong>Segundo (s)</strong>: unidad de tiempo. Se define tomando el valor numérico fijo de la frecuencia de cesio ΔνCs como 9,192,631,770 cuando se expresa en la unidad Hz, que es igual a <span style="font-size: 12pt;">s</span><span style="font-size: 8pt;"><sup>–1</sup> </span>.</p>
+<p style="text-align: justify;">■ <strong>Metro (m)</strong>: unidad de longitud. Se define tomando el valor numérico fijo de la velocidad de la luz en el vacío c como 299,792,458 m/s.<br />■ <strong>Kilogramo (kg)</strong>: unidad de masa. Se define tomando el valor numérico fijo de la constante de Planck h como 6.62607015 × 10 <sup>–34</sup> unidad J/s.<br />■ <strong>Amperio (A)</strong>: unidad de corriente eléctrica. Se define tomando el valor numérico fijo de la carga elemental e como 1.602176634 × 10 <sup>–19</sup> C.<br />■ <strong>Kelvin (K)</strong>: unidad de temperatura termodinámica. Se define tomando el valor numérico fijo de la constante k de Boltzmann como 1.380649 × 10<sup>–23</sup> JK <sup>–1</sup>.<br />■ <strong>Mol (mol)</strong>: unidad de cantidad de sustancia. Un mol contiene exactamente 6.02214076 × 1023 entidades elementales y se denomina número de Avogadro.<br />■ <strong>Candela (cd)</strong>: unidad de intensidad luminosa en una dirección dada. Se define tomando el valor numérico fijo de la eficacia luminosa de <br />la radiación monocromática de frecuencia 540 × 10<sup>12</sup> Hz, K<sub>cd</sub>, como 683.</p>
+<p style="text-align: justify;">Hasta ahora hemos utilizado el sistema internacional (SI); sin embargo existen otros sistemas de unidades: sistema métrico decimal (SMD), sistema cegesimal (CGS), sistema MKS, sistema natural, sistema técnico y sistema inglés.</p>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id23">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Actividad</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta23_160_2" class="block iDevice_content">
+<p><strong> ● Define y clasifica las magnitudes como escalares o vectoriales, según sea el caso:</strong> <br />- Densidad <br />- Tiempo<br />- Velocidad<br />- Longitud<br /><strong>● Razona si las unidades expresan la medida con exactitud:</strong><br />- El auto recorre 200 m.<br />- La velocidad con la que circula un ciclista es de 10 km.<br />- La densidad del agua es 1 g/ml. <br />- Arturo corrió sin parar durante 45 segundos.</p>
+</div>
+</div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
