--- a/tema_4_sistema_de_conversiones.html
+++ b/tema_4_sistema_de_conversiones.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
+    </head>
 <body class="exe-web-site" id="exe-node-3"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -59,6 +59,72 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Tema 4: Sistema de conversiones</h1></header>
+<article class="iDevice_wrapper preknowledgeIdevice em_iDevice em_iDevice_preknowledge" id="id24">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Conocimiento previo</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta24_161_2" class="block iDevice_content">
+<p>¿Has utilizado algún tipo de medida?</p>
+<p>¿Puedes medir la longitud de un cristal de sal utilizando una regla en pulgadas?</p>
+<p>¿Cómo lo harías?</p>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper FreeTextIdevice" id="id25">
+<div class="iDevice emphasis0">
+<div id="ta25_85" class="block iDevice_content">
+<p style="text-align: justify;">La conversión de unidades es la transformación del valor numérico de una magnitud física, expresado en una cierta unidad de medida, en otro valor numérico equivalente y expresado en otra unidad de medida de la misma naturaleza.</p>
+<p style="text-align: justify;"><strong>Múltiplos y submúltiplos</strong><br />No siempre es posible utilizar las unidades para determinar el valor de un parámetro. Por ejemplo, es difícil medir el tamaño de una hormiga <br />utilizando el metro. Es por eso que los prefijos de las unidades se utilizan para facilitar la escritura cuando se encuentran expresadas en valores <br />muy grandes o muy pequeños. Los múltiplos de las unidades se asignan con letras griegas.</p>
+<div class="exe-layout-2-cols exe-layout-2-50-50 exe-clear" style="text-align: justify;">
+<div class="exe-col exe-col-1">
+<figure class="exe-figure exe-image position-center license-custom" style="width: 259px;"><img src="3.4.1_multiplos.png" alt="" width="259" height="293" />
+<figcaption class="figcaption">Multiplos</figcaption>
+</figure>
+</div>
+<div class="exe-col exe-col-2">
+<figure class="exe-figure exe-image position-center license-custom" style="width: 258px;"><img src="3.4.2_submultiplos.png" alt="" width="258" height="289" />
+<figcaption class="figcaption"><a href="https://dummyimage.com/" target="_blank" class="author" rel="noopener">Sub multiplos</a></figcaption>
+</figure>
+</div>
+</div>
+<p style="text-align: justify;"><strong>Notación científica</strong><br />Consiste en escribir una cifra entera, entre 1 y 9, seguida de una potencia de base 10, la cual lleva un exponente que puede ser positivo o negativo <br />e indica la cantidad de ceros que recorre hasta hacer una cifra entera. Cuando el exponente es positivo, el resultado es 1, acompañado de tantos <br />ceros como indique la potencia. <br />10<sup>3  </sup>=1000 (ecuación 1) Así, 10<sup>3</sup> equivale a 1,000.</p>
+<p style="text-align: justify;">Si por el contrario el exponente es negativo, equivale a dividir el número 1 entre 10 elevado a la potencia de ese mismo número. Se representa de <br />la siguiente manera:</p>
+<p style="text-align: justify;">10<sup>-3</sup>= <img alt="" src="eXe_LaTeX_math_1.gif" width="37" height="31" style="text-align: center; font-size: 15.96px;" /> = 0.001   (ecuación 2) Entonces, 10-3 equivale a 0.001.</p>
+<p style="text-align: justify;">Por ejemplo, la distancia de la Tierra al Sol es de 150,000,000 km. Si expresamos esta cifra en notación científica, el decimal debe correrse <br />ocho espacios hacia la izquierda. Por lo tanto, en notación científica es 1.5x10<sup>8 </sup>km.</p>
+<p style="text-align: justify;">El átomo de hidrógeno (H) tiene un diámetro de alrededor de 0.00000005 mm (milímetros). Al expresar esta cantidad en notación científica, el <br />decimal debe correrse ocho espacios hacia la derecha. Así, su notación científica es 5x10<sup>-8</sup> mm.</p>
+<figure class="exe-figure exe-image float-left license-custom" style="width: 253px; text-align: justify;"><img src="3.4.3_conversion_minutos.png" alt="" width="253" height="367" />
+<figcaption class="figcaption"><a href="https://dummyimage.com/" target="_blank" class="author" rel="noopener">Tabla de cnvertir</a></figcaption>
+</figure>
+<p style="text-align: justify;"><strong></strong></p>
+<p style="text-align: justify;"><strong>Conversión de unidades</strong><br />La conversión de unidades hace referencia al cambio de medida de un sistema a otro para una cantidad específica, siempre y cuando pertenezcan a la misma magnitud. Es decir, que la conversión sea de unidad masa a unidad de masa, o de unidad de tiempo a unidad de tiempo. <br />Realizar una conversión se hace necesario cuando las unidades no se encuentran en el sistema deseado, como SI o cuando se solicita expresamente que los resultados deben ir en unidades específicas y estas son diferentes a los datos proporcionados.</p>
+<p style="text-align: justify;">Para realizar una conversión existen dos métodos:</p>
+<p style="text-align: justify;"><br /><strong>Regla de tres:</strong> Para ello se han establecido equivalencias que sirven como guía. Por ejemplo, en 1 minuto hay 60 segundos y en función de esa premisa determinar el valor deseado. Otros ejemplos de equivalencias corresponden a la tabla</p>
+<p style="text-align: justify;"></p>
+<figure class="exe-figure exe-image float-left license-custom" style="width: 1005px;"><img src="3.4.4_conversion_2.png" alt="" width="1005" height="178" />
+<figcaption class="figcaption"></figcaption>
+<figure class="exe-figure exe-image float-right license-custom" style="width: 300px; text-align: justify;"><img src="3.4.5_conversion_3.png" width="259" height="267" /></figure>
+<p>Tomando en cuenta las referencias de algunas equivalencias, podemos calcular la masa de 30 kg en lb:</p>
+<p>Recuerda que la Notación científica: es la Abreviación al <span style="font-size: 15.96px;">representar números muy grandes o pequeños de una manera </span><span style="font-size: 15.96px;">más concisa y manejable. En la </span>matemática que se utiliza para notación científica, un número se expresa como el producto de dos factores: una parte decimal entre 1 y 10 (llamada coeficiente) y una potencia de 10 que indica la escala del número.</p>
+</figure>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id27">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Actividad</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta27_164_2" class="block iDevice_content">
+<p>● Elabora un cuadro como una de las tablas de la unidad, con equivalencias de volumen para litros, pinta y galón, tomando como referencia m<sup>3</sup><br />● Convierte las siguientes unidades:<br />A) 4 yd a m.             B) 2000 m<sup>2</sup> a ha.</p>
+<p>● Convierte 54,000 minutos en horas.<br />● ¿A cuántos días son equivalentes 8 años?<br />● Cuantas tareas son equivalentes a 12,500 m<sup>2</sup>?</p>
+</div>
+</div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
