--- a/tema_5_errores.html
+++ b/tema_5_errores.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
+    </head>
 <body class="exe-web-site" id="exe-node-5"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -59,6 +59,56 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Tema 5: Errores</h1></header>
+<article class="iDevice_wrapper preknowledgeIdevice em_iDevice em_iDevice_preknowledge" id="id17">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Conocimiento previo</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta17_154_2" class="block iDevice_content">
+<p>¿Conoces algún modelo, principio ley o teoría de las ciencias físicas? <br />¿Crees que son importantes para generar conocimiento científico?    ¿Por qué?</p>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper FreeTextIdevice" id="id28">
+<div class="iDevice emphasis0">
+<div id="ta28_85" class="block iDevice_content">
+<figure class="exe-figure exe-image float-right license-custom" style="width: 265px;"><img src="3.5.1_errores.png" alt="" width="265" height="480" />
+<figcaption class="figcaption"></figcaption>
+</figure>
+<p>Las ciencias físicas precisan realizar mediciones cuantitativas de las magnitudes, ya sea de manera directa (usando un aparato o instrumento) o indirecta (utilizando una fórmula). Sin embargo, las medidas nunca permiten obtener un valor «verdadero» de lo que se mide, y las razones más frecuentes son los errores en los equipos utilizados y el sentido de quien calcula. Debido a esto es común encontrar que en lugar de mencionar el término «verdadero» para un valor real, se utilice valor teórico (Vt), porque toda medida tiene un grado de incertidumbre, definido por algunos autores como «error».<br /><strong>Errores</strong><br />Pueden considerarse como las estimaciones o cuantificaciones de la incertidumbre de una medida, es decir, la diferencia entre un valor medido y un valor teórico. Mientras mayor sea el error calculado, más <br />incierta será la medida.<br />Una forma de minimizar los errores y tomar el valor más probablemente correcto consiste en realizar varias veces la misma medición (x), al obtener una serie, calcular la media aritmética (x̅) que se obtiene al realizar la sumatoria de medidas (x), y dividirlas entre el número de repeticiones (n).</p>
+<p><img alt="" src="eXe_LaTeX_math_2.gif" width="200" height="24" style="text-align: center; font-size: 15.96px;" />  (ecuación 3)<br /><br /><strong>Tipos de errores</strong><br />En las mediciones de las magnitudes físicas se presentan principalmente dos tipos de errores:<br />Error absoluto. Resulta de la diferencia entre el valor teórico (o valor promedio) y el valor obtenido de cada medición (valor medido), como lo expresa la ecuación <strong>E<sub>a</sub>=|x̅-x|</strong> (ecuación 4).</p>
+<p>Al restar la media aritmética de cualquier valor x<sub>i</sub> , puede generar un resultado negativo, pero al aplicar el símbolo de valor absoluto siempre dará un resultado positivo. Es necesario aplicar esta fórmula para cada medida del problema propuesto, ya que cada una arrojará su propio error absoluto.<br style="clear: both;" />Cuando no es posible realizar varias mediciones, el error absoluto viene dado por la apreciación del instrumento de medición. La apreciación, <br />también conocida como precisión de un instrumento, representa la menor medida exacta que se puede tomar con el instrumento. Se calcula tomando dos medidas, consecutivas o no, y dividiéndolas entre el número de divisiones que hay entre ellas.</p>
+<p><strong>Error relativo</strong>.</p>
+<p>Es el resultado de dividir el error absoluto (Ea) entre la media aritmética obtenida (x̅). El error relativo puede ser positivo o negativo, según sea el error absoluto, de allí el uso del símbolo ±. Se calcula con la ecuación <strong>(Error absoluto/media aritmetica) * 100 (ecuación 5).</strong><br />Para la primera medida (3.05 s) del ejercicio de referencia, el error relativo se calcula: <strong>E<sub>r</sub> = (Ea/ x̅). 100 % = (0.03 s/ 3.02 s) . 100 % = 0.99 %</strong><br /><strong>(ecuación 6).</strong></p>
+<div class="exe-layout-2-cols exe-layout-2-50-50 exe-clear">
+<div class="exe-col exe-col-1">
+<figure class="exe-figure exe-image position-center license-custom" style="width: 262px;"><img src="3.5.2_errores.png" alt="" width="262" height="371" /></figure>
+</div>
+<div class="exe-col exe-col-2">
+<figure class="exe-figure exe-image position-center license-custom" style="width: 266px;"><br /><img src="3.5.3_errores.png" alt="" width="266" height="282" />
+<figcaption class="figcaption"></figcaption>
+</figure>
+</div>
+</div>
+<p>Para cada medición existe un porcentaje de error permitido; mientras más bajo sea el valor obtenido para este cálculo, más confiable será la medición. <br /><em><strong>En este caso es 0.99 %, lo que se considera un error aceptable</strong></em>.<br />Las cifras significativas, son los dígitos en un número que contribuyen a su precisión o incertidumbre y representan la cantidad confiable en un <br />valor numérico. Las reglas básicas para determinarlas son:<br />■ Todos los dígitos no nulos (1-9) son siempre cifras significativas. Por ejemplo, en el número 345, hay tres cifras significativas.<br />■ Los ceros situados entre dígitos diferentes de cero son cifras significativas. Por ejemplo, en el número 506, hay tres cifras significativas.<br />■ Los ceros a la izquierda de la parte entera del número no son cifras significativas. Por ejemplo, en el número 0.05, hay solo una cifra significativa.<br />■ Los ceros a la derecha de la parte decimal del número son cifras significativas si están respaldados por dígitos diferentes de cero. Por ejemplo, en el número 1.050, hay cuatro cifras significativas.</p>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper activityIdevice em_iDevice em_iDevice_activity" id="id29">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Actividad</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta29_128_2" class="block iDevice_content">
+<p>● Tomando como referencia tres cuadernos del mismo tamaño, mide su longitud en cm con una regla; maneja las cifras significativas <br />correspondientes en cada medida.</p>
+<p>Calcula el error absoluto y el porcentaje de error relativo. Determina la precisión de la regla utilizada en la medición</p>
+</div>
+</div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
